set up the project by creating a database, Initial mIgration, Form view, DbContext, and a controller

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=TodoDB;Trusted_Connection=True\")"
+  },
   "AllowedHosts": "*"
 }
