modified the connection string

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=TodoDB;Trusted_Connection=True\")"
+    "DefaultConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=TodoDB;Trusted_Connection=True;"
   },
   "AllowedHosts": "*"
 }
